src/main/java/com/example/demo/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: java-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      serviceAccountName: secret-reader
      containers:
        - name: java-app
          image: 605134446430.dkr.ecr.us-east-2.amazonaws.com/java-app:1.0
          ports:
            - containerPort: 8080
